--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -242,7 +242,7 @@
     				</div>
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-    					   <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.pqNuPo0ZurLFrJDS57vwIwHaDU%26pid%3DApi&f=1&ipt=4172da559cf6103b0a058ff7f72a60194dc87ca57657e5bc5c41ca70e2a63592&ipo=images" class="img-responsive" alt="portfolio img 1">
+    					   <img style="height: 195px;" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.pqNuPo0ZurLFrJDS57vwIwHaDU%26pid%3DApi&f=1&ipt=4172da559cf6103b0a058ff7f72a60194dc87ca57657e5bc5c41ca70e2a63592&ipo=images" class="img-responsive" alt="portfolio img 1">
                                 <div class="portfolio-overlay">
                                     <h4>Alumni Meetup #1</h4>
                                     <p></p>
@@ -259,7 +259,7 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.qmjJD9v3n1HREL0jiI6udQHaE8%26pid%3DApi&f=1&ipt=f38554afd76fe1d83a5f6ad0a9ffc9a813354b1f6ab5d65943970d58e681227f&ipo=images" class="img-responsive" alt="portfolio img 3">
+                           <img  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.qmjJD9v3n1HREL0jiI6udQHaE8%26pid%3DApi&f=1&ipt=f38554afd76fe1d83a5f6ad0a9ffc9a813354b1f6ab5d65943970d58e681227f&ipo=images" class="img-responsive" alt="portfolio img 3">
                                 <div class="portfolio-overlay">
                                     <h4>Alumni Meetup #3</h4>
                                 </div>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HDnPgfOWqWvL6jZheF_P5gHaDq%26pid%3DApi&f=1&ipt=bae5c6050fbc2163ad44a8fffb9039cccb33f7a6abcd01f40fd028afca0db755&ipo=images" class="img-responsive" alt="portfolio img 4">
+                           <img style="height: 195px;" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HDnPgfOWqWvL6jZheF_P5gHaDq%26pid%3DApi&f=1&ipt=bae5c6050fbc2163ad44a8fffb9039cccb33f7a6abcd01f40fd028afca0db755&ipo=images" class="img-responsive" alt="portfolio img 4">
                                 <div class="portfolio-overlay">
                                     <h4>Alumni Meetup #4</h4>
                                 </div>
@@ -275,7 +275,7 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
+                           <img style="height: 195px;" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.QJiUVyjGv-bD4J54dYGkWQHaDw%26pid%3DApi&f=1&ipt=aa1631675b671f9a51c5bf95b9f8a4f6d26f928e4dea214f37722ec4553e7f7b&ipo=images" class="img-responsive" alt="portfolio img 3">
                                 <div class="portfolio-overlay">
                                     <h4>Alumni Meetup #5</h4>
                                 </div>
@@ -283,31 +283,25 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.QkvPLtPMaNLMwHZ5AybchgHaE8%26pid%3DApi&f=1&ipt=b36cc4f246f0e28e6c8d3650f58e7977c5b1868461488bf218a13adfe92691bc&ipo=images" class="img-responsive" alt="portfolio img 4">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Six</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #6</h4>
                                 </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 1">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.fJuhCfAIALkVw9U60w3XeQHaE8%26pid%3DApi&f=1&ipt=9dfc92922c829915de16f1095e459fc7664f18c6d7fe954caaac20c7a1ce0db8&ipo=images" class="img-responsive" alt="portfolio img 1">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Seven</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #7</h4>
                                 </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img 2">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.kYyh0rm_NDDO3AJhSyMHewHaE8%26pid%3DApi&f=1&ipt=f9271647aee3a1c91db02ebd166fc5b335b33369fabf590ed591acd164acc82c&ipo=images" class="img-responsive" alt="portfolio img 2">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Eight</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #5</h4>
                                 </div>
                         </div>
                     </div>
