--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -167,7 +167,7 @@
 						<div class="team-wrapper">
 							<img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="images/a9.jpeg" class="img-responsive" alt="team img 1">
 							<div class="team-des">
-								<p>My experience at Aalto University was more encouraging about life because of the high work- life balance. Seeing the startup culture in Finland wanted to continue in a job at a Finland startup but it was really difficult to get a job due to the COVID situation. Then, I explored the Indian startup ecosystem but I felt the pay was low to start a career, later I was able to find a startup of my interest because of some of my friends in Finland with decent pay to give me</p>
+								<p>My experience at Amrita University was more encouraging about life because of the high work- life balance. Seeing the startup culture in Finland wanted to continue in a job at a Finland startup but it was really difficult to get a job due to the COVID situation. Then, I explored the Indian startup ecosystem but I felt the pay was low to start a career, later I was able to find a startup of my interest because of some of my friends in Finland with decent pay to give me</p>
 									<p style="text-align: right;"><span>Julia&emsp;</span></p>
 							</div>
 						</div>
