--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -107,9 +107,7 @@
                         <img style="height:265px; width:250px;" src="../images/a1.jpeg" class="img-responsive" alt="team img 1">
                         <div class="team-des">
                             <h4>SAURABH JHA</h4>
-                            <p>Saurabh Jha is a Ph.D. candidate at the University of Illinois at Urbana Champaign in the department of ComputerScience.
-
-been awarded the 2020 IBM Ph.D. fellowship. I am one in 24 chosen candidates world-wide from applicants from across 140 universities in 31 countries.</p>
+                            <p>Saurabh Jha is a Ph.D. candidate at the University of Illinois at Urbana Champaign in the department of ComputerScience.</p>
                         </div>
                     </div>
                 </div>
