--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -281,9 +281,9 @@ ES</p>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">
-                       Copyright &copy; UID-DBMS-03<br>Part of 20CYS202-User Interface Design<br>
-                    Amrita TIFAC-CORE in cybersecurity<br>Amrita Vishwa Vidyapeetham Coimbatore</p>
+                            <p class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">
+							Copyright &copy; 2022-23 Alumni Portal<br>G H Hem Sagar, Gokulachselvan CD, KS Santhossh<br>II B.Tech CSE(CYS)
+                            <br>Part of 20CYS202 - User Interface Design<br>Amrita Vishwa Vidyapeetham Coimbatore</p>
                 </div>
             </div>
         </div>
