--- a/Mini-Project/html/profile.html
+++ b/Mini-Project/html/profile.html
@@ -34,15 +34,15 @@
 		<div class="account-settings">
 			<div class="user-profile"><br><br><br><br><br>
 				<div class="user-avatar">
-					<img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Maxwell Admin">
+					<img src="../images/ramaguru_profile.png" alt="Maxwell Admin">
 				</div>
-				<h5 class="user-name">Madan Gowri</h5>
-				<h6 class="user-email">madangowri@gmail.com</h6><br>
+				<h5 class="user-name">R Ramaguru Radhakrishnan</h5>
+				<h6 class="user-email">r_ramaguru@cb.amrita.edu</h6><br>
                 <div class="social">
-                    <a href="https://in.linkedin.com/in/madangowri"><img src="https://img.icons8.com/ios-filled/50/null/linkedin.png"/></a>
-                    <a href="https://github.com"><img src="https://img.icons8.com/ios-filled/50/null/github.png"/></a>
-                    <a href="https://www.instagram.com/madangowri/"><img src="https://img.icons8.com/glyph-neue/64/null/instagram-new.png"/></a>
-                    <a href="https://www.facebook.com/iammadangowri/"><img src="https://img.icons8.com/ios-filled/50/null/facebook-new.png"/></a>
+                    <a href="https://www.linkedin.com/in/ramaguru-radhakrishnan"><img src="https://img.icons8.com/ios-filled/50/null/linkedin.png"/></a>
+                    <a href="https://github.com/ramagururadhakrishnan"><img src="https://img.icons8.com/ios-filled/50/null/github.png"/></a>
+                    <a href="https://www.instagram.com/ramagururadhakrishnan/"><img src="https://img.icons8.com/glyph-neue/64/null/instagram-new.png"/></a>
+                    <a href="https://www.facebook.com/ramagururadhakrishnan/"><img src="https://img.icons8.com/ios-filled/50/null/facebook-new.png"/></a>
                 </div>
 			</div>
 		</div>
@@ -59,37 +59,37 @@
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="fullName">Full Name</label>
-					<input type="text" class="form-control" id="fullName" value="Madan Gowri"placeholder="Enter full name" required>
+					<input type="text" class="form-control" id="fullName" value="Ramaguru Radhakrishnan"placeholder="Enter full name" required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="eMail">Email</label>
-					<input type="email" class="form-control" id="eMail" value="madangowri@gmail.com" placeholder="Enter email ID" required>
+					<input type="email" class="form-control" id="eMail" value="r_ramaguru@cb.amrita.edu" placeholder="Enter email ID" required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="phone">Phone</label>
-					<input type="text" class="form-control" id="phone" value="4839402323" placeholder="Enter phone number" required>
+					<input type="text" class="form-control" id="phone" value="9865496XXX" placeholder="Enter phone number" required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="website">College Id</label>
-					<input type="text" class="form-control" id="clgId" value="CB.EN.U4ARE201032" placeholder="Enter College ID" required>
+					<input type="text" class="form-control" id="clgId" value="CB.EN.P2CYS2017XX" placeholder="Enter College ID" required>
 				</div>
 			</div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="phone">Graduation Year</label>
-					<input type="text" class="form-control" id="gradYear" value="2010" placeholder="Enter phone number" required>
+					<input type="text" class="form-control" id="gradYear" value="2019" placeholder="Enter phone number" required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="website">Age</label>
-					<input type="text" class="form-control" id="age" value="35" placeholder="Enter your Age" required>
+					<input type="text" class="form-control" id="age" value="32" placeholder="Enter your Age" required>
 				</div>
 			</div>
 		</div>
@@ -100,25 +100,25 @@
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="Street">Workspace Name</label>
-					<input type="name" class="form-control" id="wrkSpace" value="L&T limited" placeholder="Enter Workspace name"required>
+					<input type="name" class="form-control" id="wrkSpace" value="Amrita School of Engineering" placeholder="Enter Workspace name"required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="ciTy">Occupation</label>
-					<input type="name" class="form-control" id="Occup" value="Engine " placeholder="Enter Your Occupation"required>
+					<input type="name" class="form-control" id="Occup" value="Asst. Professor" placeholder="Enter Your Occupation"required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="sTate">Country</label>
-					<input type="text" class="form-control" id="sTate" value="USA" placeholder="Enter State"required>
+					<input type="text" class="form-control" id="sTate" value="India" placeholder="Enter State"required>
 				</div>
 			</div>
 			<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
 				<div class="form-group">
 					<label for="zIp">Zip Code</label>
-					<input type="text" class="form-control" id="zIp" value="2303203" placeholder="Zip Code"required>
+					<input type="text" class="form-control" id="zIp" value="641112" placeholder="Zip Code"required>
 				</div>
 			</div>
 		</div>
@@ -138,6 +138,7 @@
 <script>
     function func(){
         window.alert("Profile Updated.");
+		
     }
  </script>
 
